--- a/packages/payload/docker-compose.yml
+++ b/packages/payload/docker-compose.yml
@@ -3,8 +3,9 @@ version: '3'
 services:
   payload:
     image: node:18-alpine
+    container_name: payload-carvana 
     ports:
-      - '4001:4001'
+      - '4001:3000'
     volumes:
       - .:/home/node/app
       - node_modules:/home/node/app/node_modules
@@ -17,8 +18,9 @@ services:
 
   mongo:
     image: mongo:latest
+    container_name: mongo-carvana
     ports:
-      - "28017:27017"  # Map host port 28017 to container's 27017
+      - "27018:27017"
     command:
       - --storageEngine=wiredTiger
     volumes:
